<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="vertical"
        android:padding="16dp"
        tools:ignore="UseAppTint"
        tools:context=".presentation.FullVacancyFragment"
         android:id="@+id/fullVacancyFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_back"
                android:tint="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="UseAppTint" />

            <ImageView
                android:id="@+id/migVisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_visible"

                android:tint="@color/white"
                app:layout_constraintEnd_toStartOf="@+id/imgShare"
                app:layout_constraintTop_toTopOf="@+id/btn_back" />

            <ImageView
                android:id="@+id/imgShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_share"
                android:tint="@color/white"
                app:layout_constraintEnd_toStartOf="@+id/iv_favorite"
                app:layout_constraintTop_toTopOf="@+id/migVisible"
                tools:ignore="UseAppTint" />

            <ImageView
                android:id="@+id/iv_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_favourite_fill"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imgShare"
                tools:ignore="UseAppTint" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UseAppTint">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="26dp"
                    android:text="@string/tv_title"
                    android:textColor="@color/white"
                    android:textFontWeight="600"
                    android:textSize="22sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_salary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="Уровень дохода не указан"
                    android:textColor="@color/white"
                    android:textFontWeight="400"
                    android:textSize="14dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title" />

                <TextView
                    android:id="@+id/tv_experience"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/white"
                    android:text="@string/tv_experience"
                    android:textFontWeight="400"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_salary" />

                <TextView
                    android:id="@+id/tv_schedules"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_schedules"
                    android:textColor="@color/white"
                    android:textFontWeight="400"
                    android:textSize="14dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_experience" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/blocks"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_schedules">

                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="160dp"
                        android:layout_height="50dp"
                        android:background="@drawable/background_card"
                        android:backgroundTint="@color/green_dark"
                        android:orientation="horizontal"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:layout_editor_absoluteX="17dp">

                        <TextView
                            android:id="@+id/tv_applied_people"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:text="@string/tv_applied_people_2"
                            android:textColor="@color/white"
                            android:textFontWeight="400"
                            android:textSize="14dp" />

                        <ImageView
                            android:id="@+id/imgPeopleOtclick"
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:layout_marginStart="24dp"
                            android:layout_marginTop="8dp"
                            android:src="@drawable/ic_person_green" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout2"
                        android:layout_width="160dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="8dp"
                        android:background="@drawable/background_card"
                        android:backgroundTint="@color/green_dark"
                        android:orientation="horizontal"
                        app:layout_constraintStart_toEndOf="@+id/linearLayout"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/tv_looking_number"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:text="@string/tv_looking_number"
                            android:textColor="@color/white"
                            android:textFontWeight="400"
                            android:textSize="14sp" />

                        <ImageView
                            android:id="@+id/imgPeopleLook"
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:layout_marginStart="24dp"
                            android:layout_marginTop="8dp"
                            android:src="@drawable/ic_visible_green" />
                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.cardview.widget.CardView
                    android:id="@+id/cardMap"
                    android:layout_width="match_parent"
                    android:layout_height="134dp"
                    android:layout_marginTop="24dp"
                    app:cardBackgroundColor="@color/gray_one"
                    app:cardCornerRadius="12dp"
                    app:layout_constrainedHeight="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/blocks">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/tv_company_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="12dp"
                            android:text="@string/tv_company_name"
                            android:textColor="@color/white"
                            android:textFontWeight="500"
                            android:textSize="16sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="12dp"
                            android:layout_height="12dp"
                            android:layout_marginStart="10dp"
                            android:src="@drawable/ic_done"
                            app:layout_constraintBottom_toBottomOf="@+id/tv_company_name"
                            app:layout_constraintStart_toEndOf="@+id/tv_company_name"
                            app:layout_constraintTop_toTopOf="@+id/tv_company_name" />

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cardView"
                            android:layout_width="0dp"
                            android:layout_height="58dp"
                            android:layout_marginHorizontal="16dp"
                            android:layout_marginTop="8dp"
                            app:cardCornerRadius="12dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tv_company_name">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:scaleType="fitXY"
                                android:src="@drawable/test" />
                        </androidx.cardview.widget.CardView>

                        <TextView
                            android:id="@+id/tv_address"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/tv_address"
                            android:textColor="@color/white"
                            android:textFontWeight="400"
                            android:textSize="14sp"
                            app:layout_constraintStart_toStartOf="@+id/cardView"
                            app:layout_constraintTop_toBottomOf="@+id/cardView" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tv_descripton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/tv_descripton"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardMap" />

                <TextView
                    android:id="@+id/tv_responsibities_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/tv_responsibities_title"
                    android:textColor="@color/white"
                    android:textFontWeight="600"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_descripton" />

                <TextView
                    android:id="@+id/tv_responsibilities"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/white"
                    android:text="@string/tv_responsibilities"
                    android:textFontWeight="400"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_responsibities_title" />

                <TextView
                    android:id="@+id/ask"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/ask"
                    android:textColor="@color/white"
                    android:textFontWeight="500"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_responsibilities" />

                <TextView
                    android:id="@+id/tv_he_get"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/tv_he_get"
                    android:textColor="@color/gray_light"
                    android:textFontWeight="500"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ask" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_questions"
                    android:layout_width="280dp"
                    android:layout_height="170dp"
                    android:layout_marginTop="16dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_he_get"
                    tools:itemCount="4"
                    tools:listitem="@layout/item_question" />

                <Button
                    android:id="@+id/btn_response"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/background_button_blue_selector"
                    android:backgroundTint="@color/green"
                    android:text="@string/btn_response"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rv_questions" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>